--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.02     2012-06-14
+
+- Made the SYNOPSIS use Moose (derr).
+
+
 0.01     2012-04-13
 
 - First release upon an unsuspecting world.
