--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.03     2013-04-01
+
+- Updates to work with the latest Database::Migrator.
+
+
 0.02     2012-06-14
 
 - Made the SYNOPSIS use Moose (derr).
