Import of DROLSKY/Database-Migrator-mysql-0.05 from CPAN.
gitpan-cpan-distribution: Database-Migrator-mysql
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DROLSKY/Database-Migrator-mysql-0.05.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Database-Migrator-mysql,
-version 0.04:
+version 0.05:
 
   Database::Migrator implementation for MySQL
 
-This software is Copyright (c) 2013 by MaxMind, LLC.
+This software is Copyright (c) 2013 by MaxMind, Inc..
 
 This is free software, licensed under:
 
