--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.05     2013-06-16
+
+- Provide the _driver_name sub needed by the latest Database::Migrator::Core.
+
+
 0.04     2013-04-02
 
 - Improved documentation.
